--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.8.1
+attrs==24.3.0
+autobahn==24.4.2
+Automat==24.8.1
 Brotli==1.1.0
 cffi==1.17.1
+constantly==23.10.4
+cryptography==44.0.0
 cssselect2==0.7.0
+daphne==4.1.2
+dj-database-url==2.3.0
 Django==5.1.4
 django-filter==24.3
 django-rest-passwordreset==1.5.0
@@ -9,17 +16,30 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-nested-routers==0.94.1
 fonttools==4.55.3
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 Markdown==3.7
 pillow==11.0.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydyf==0.11.0
 Pygments==2.18.0
 PyJWT==2.10.1
+pyOpenSSL==24.3.0
 pyphen==0.17.0
+service-identity==24.2.0
+setuptools==75.6.0
 sqlparse==0.5.3
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
 tzdata==2024.2
 weasyprint==63.1
 webencodings==0.5.1
+zope.interface==7.2
 zopfli==0.2.3.post1
