--- a/requirements.txt
+++ b/requirements.txt
@@ -41,5 +41,6 @@ typing_extensions==4.12.2
 tzdata==2024.2
 weasyprint==63.1
 webencodings==0.5.1
+whitenoise==6.8.2
 zope.interface==7.2
 zopfli==0.2.3.post1
