--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cssselect2==0.7.0
 daphne==4.1.2
 dj-database-url==2.3.0
 Django==5.1.4
+django-cors-headers==4.6.0
 django-filter==24.3
 django-rest-passwordreset==1.5.0
 djangorestframework==3.15.2
